--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "lib/client.js",
+    "app/server..js",
+    "lib/storage.tsx"
+  ],
   "exclude": ["node_modules"]
 }
