--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
