--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@apollo/client": "^3.11.0",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
+    "chart.js": "^4.4.3",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
