--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "starter": "npm install",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
